--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>                       
+    <script src="index.js">//exemplo de source para o arquivo index</script>                       
 </body>
 </html>
